--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+img{
+	height:200px;
+}
+h3{
+	text-decoration:underline;
+}
+h2{
+	text-decoration:underline;
+}
+
